--- a/mitzvah/src/index.html
+++ b/mitzvah/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico">
 </head>
 <body>
+	Hello
   <app-root></app-root>
 </body>
 </html>
