--- a/mitzvah/static/index.html
+++ b/mitzvah/static/index.html
@@ -9,5 +9,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="static/inline.bundle.js"></script><script type="text/javascript" src="static/polyfills.bundle.js"></script><script type="text/javascript" src="static/styles.bundle.js"></script><script type="text/javascript" src="static/vendor.bundle.js"></script><script type="text/javascript" src="static/main.bundle.js"></script></body>
+<script type="text/javascript" src="static/inline.bundle.js"></script><script type="text/javascript" src="static/polyfills.bundle.js"></script><script type="text/javascript" src="static/styles.bundle.js"></script><script type="text/javascript" src="static/scripts.bundle.js"></script><script type="text/javascript" src="static/vendor.bundle.js"></script><script type="text/javascript" src="static/main.bundle.js"></script></body>
 </html>
