near-prod build

--- a/mitzvah/static/index.html
+++ b/mitzvah/static/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico">
-</head>
+<link href="static/styles.399708955e9f02fb85f3.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="static/inline.bundle.js"></script><script type="text/javascript" src="static/polyfills.bundle.js"></script><script type="text/javascript" src="static/styles.bundle.js"></script><script type="text/javascript" src="static/scripts.bundle.js"></script><script type="text/javascript" src="static/vendor.bundle.js"></script><script type="text/javascript" src="static/main.bundle.js"></script></body>
+<script type="text/javascript" src="static/inline.f0ca228546bbfce2db40.bundle.js"></script><script type="text/javascript" src="static/polyfills.1d9db8f86ef7232e8214.bundle.js"></script><script type="text/javascript" src="static/scripts.f70ba20f2fcd51563841.bundle.js"></script><script type="text/javascript" src="static/main.45b4839c5107141a747f.bundle.js"></script></body>
 </html>
