--- a/mitzvah/static/index.html
+++ b/mitzvah/static/index.html
@@ -1,13 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Mitzvah</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico">
-<link href="static/styles.399708955e9f02fb85f3.bundle.css" rel="stylesheet"/></head>
-<body>
-  <app-root></app-root>
-<script type="text/javascript" src="static/inline.f0ca228546bbfce2db40.bundle.js"></script><script type="text/javascript" src="static/polyfills.1d9db8f86ef7232e8214.bundle.js"></script><script type="text/javascript" src="static/scripts.f70ba20f2fcd51563841.bundle.js"></script><script type="text/javascript" src="static/main.45b4839c5107141a747f.bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Mitzvah</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="static/assets/favicon.ico"><link href="static/styles.cf568e3ed28ea7fbed85.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="static/inline.f0ca228546bbfce2db40.bundle.js"></script><script type="text/javascript" src="static/polyfills.bf95165a1d5098766b92.bundle.js"></script><script type="text/javascript" src="static/scripts.47fa3c571011b1bd2db3.bundle.js"></script><script type="text/javascript" src="static/main.622344e6ae677cd94771.bundle.js"></script></body></html>
