--- a/mitzvah/static/index.html
+++ b/mitzvah/static/index.html
@@ -1,13 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Mitzvah</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-<script type="text/javascript" src="static/inline.bundle.js"></script><script type="text/javascript" src="static/polyfills.bundle.js"></script><script type="text/javascript" src="static/styles.bundle.js"></script><script type="text/javascript" src="static/scripts.bundle.js"></script><script type="text/javascript" src="static/vendor.bundle.js"></script><script type="text/javascript" src="static/main.bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Mitzvah</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="static/assets/favicon.ico"><link href="static/styles.6351f4600e33f31adb35.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="static/inline.f0ca228546bbfce2db40.bundle.js"></script><script type="text/javascript" src="static/polyfills.bf95165a1d5098766b92.bundle.js"></script><script type="text/javascript" src="static/scripts.47fa3c571011b1bd2db3.bundle.js"></script><script type="text/javascript" src="static/main.0e46d25166042b82e025.bundle.js"></script></body></html>
